logs/watchdog_20251011_1215.log
[11/10/2025 12:15:02,44] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 12:15:02,73] END WATCHDOG 
